# ftai-rs

./: CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/plans/: 2026-05-07-ftai-rs-v1-implementation.md
docs/specs/: 2026-05-07-ftai-rs-v1-design.md
scripts/: install-hooks.sh
src/: ast.rs  de.rs  error.rs  lexer.rs  lib.rs  parser.rs  ser.rs  serializer.rs
tests/: grammar_conformance.rs  lenient_recovery.rs  parity_python.rs  red_cat1_input.rs  red_cat7_hygiene.rs  roundtrip_corpus.rs  serde_roundtrip.rs
tests/fixtures/: README.md  dummy_test.ftai  parseftai_json_adapter.py  parseftai_linter.py  pass_full_typing.ftai  pass_minimal.ftai  pass_nested_sections.ftai  pass_quotes.ftai  pass_table.ftai  sample_valid.ftai
