[package]
name = "ftai"
version = "0.1.0"
edition = "2021"
authors = ["Mike Folk <mike@folktech.ai>"]
description = "FTAI v2.0 parser and serde adapter — Rust sibling of FolkTechAI/ftai-spec"
license = "Apache-2.0"
repository = "https://github.com/FolkTechAI/ftai-rs"
readme = "README.md"
keywords = ["ftai", "parser", "serde", "folktech"]
categories = ["parser-implementations", "encoding"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
pretty_assertions = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
